src/scss/graph.scss
@import 'colors';
@import 'constants';

.graph-container {
    position: -webkit-sticky;
    position: sticky;
    top: 8rem;
    margin-bottom: $standard-spacing;
    z-index: -1;
}

svg {
    background-color: $background-color;
    font-family: 'Roboto Condensed', sans-serif;
    display: block;
    margin: auto;
    max-height: $graph-height;
}

@media (min-width: 1200px) {
    .graph-container {
        position: initial;
        top: initial;
        margin-bottom: 0;
    }

    svg {
        position: -webkit-sticky;
        position: sticky;
        top: calc(50vh - #{$graph-height} / 2);
    }
}

svg circle {
    fill: $graph-teal-color;
    stroke: $graph-teal-color;
    fill-opacity: 0.4;
    stroke-opacity: 1;

    &.sector-22 {
        fill: $graph-blue-color;
        stroke: $graph-blue-color;
    }

    &.sector-42 {
        fill: $graph-light-blue-color;
        stroke: $graph-light-blue-color;
    }

    &.sector-51 {
        fill: $graph-orange-color;
        stroke: $graph-orange-color;
    }

    &.sector-52 {
        fill: $graph-gold-color;
        stroke: $graph-gold-color;
    }

    &.sector-53 {
        fill: $graph-green-color;
        stroke: $graph-green-color;
    }

    &.sector-54 {
        fill: $graph-light-green-color;
        stroke: $graph-light-green-color;
    }

    &.sector-56 {
        fill: $graph-red-color;
        stroke: $graph-red-color;
    }

    &.sector-61 {
        fill: $graph-light-red-color;
        stroke: $graph-light-red-color;
    }

    &.sector-62 {
        fill: $graph-purple-color;
        stroke: $graph-purple-color;
    }

    &.sector-71 {
        fill: $graph-light-purple-color;
        stroke: $graph-light-purple-color;
    }

    &.sector-72 {
        fill: $graph-cyan-color;
        stroke: $graph-cyan-color;
    }

    &.sector-81 {
        fill: $graph-pink-color;
        stroke: $graph-pink-color;
    }

    &.fade {
        fill: lighten($graph-gray-color, 20%);
        stroke: lighten($graph-gray-color, 20%);
    }

    &.legend {
        fill: lighten($graph-gray-color, 30%);
        stroke: lighten($graph-gray-color, 20%);
    }
}

svg line, svg path {
    pointer-events: none;
}

svg .grid {
    color: $graph-gray-color;
    stroke-width: 0.4;
}

svg .panel-title {
    font-family: 'Rubik', sans-serif;
    font-size: 20px;
}

svg .axis-title {
    font-family: 'Rubik', sans-serif;
}

svg .legend-text {
    font-size: 12px;
    fill: $graph-faded-text-color;
}

svg .size-legend {
    pointer-events: none;

    .legend-bg {
        fill: $graph-light-gray-color;
        fill-opacity: 1;
    }

    .legend-line {
        stroke: $graph-gray-color;
    }
}

svg .color-legend {
    .legend-box {
        .legend-text {
            fill: darken($graph-gray-color, 10%);
        }

        rect {
            fill: transparent;
            stroke: $graph-gray-color;
        }

        circle, text {
            pointer-events: none;
        }
    }

    .legend-box.fade {
        .legend-text {
            fill: lighten($graph-gray-color, 10%);
        }

        circle {
            fill: lighten($graph-gray-color, 20%);
            stroke: lighten($graph-gray-color, 20%);
        }
    }
}

svg .dashed-line {
    stroke: $graph-gray-color;
    stroke-dasharray: 8;
}

svg .annotation-group {
    .annotation-note-bg {
        fill: $graph-light-gray-color;
        fill-opacity: 1;
    }

    .annotation-note-label {
        text-anchor: middle;
        fill: $graph-faded-text-color;
        font-size: 13px;
    }
}

svg .tooltip-annotation-group {
    .annotation-note-bg {
        stroke: darken($graph-light-gray-color, 10%);
    }

    .annotation-note-label {
        text-anchor: start;
    }
}

